# mledgeawssample

./: .gitignore  .pre-commit-config.yaml  make.ps1  mynotes.md  pyproject.toml
.github/: copilot-instructions.md
docs/: iam-refactoring-summary.md  implementation-plan.md  infra-dev-onboarding.md  infra-security-overview.md  local-training-requirements.md  project-high-level-description.md  sagemaker-usage-strategy.md  sso-decision-record.md
infra/: budget.tf  iam-lambda.tf  iam-s3.tf  iam-sagemaker.tf  iam-users-groups.tf  iam.tf  kms.tf  main.tf  outputs.tf  s3-security.tf  s3.tf  sso-permission-sets.tf  variables.tf
tests/: __init__.py  conftest.py  test_basic.py
tests/aws/: __init__.py  test_aws_mocking.py
tests/fixtures/: __init__.py
tests/infrastructure/: test_terraform_validation.py
